config cloudbuild.yaml #5

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,13 +9,13 @@ steps:
         '.',
       ]
 
-  # Configure Docker for Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['configure-docker']
-
   # Push the Docker image to Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'asia-southeast2-docker.pkg.dev/testing-baksara/app/app']
+
+  # Configure Docker for Artifact Registry using gcloud
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['auth', 'configure-docker', 'asia-southeast2-docker.pkg.dev']
 
   # Deploy to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
