--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.7.0",
     "body-parser": "^1.20.2",
     "carakanjs": "^1.1.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "fs": "^0.0.1-security",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
